# tach

./: .gitignore  README.md
apps/tach-manager-impulse/: README.md  client_session_key.aes  tach-manager-impulse.cabal  testCFG.yaml
apps/tach-manager-impulse/src/: Main.hs
apps/tach-manager-impulse/src/Tach/Manager/: Impulse.hs
apps/tach-manager-impulse/src/Tach/Manager/Impulse/: AppManager.hs  Internal.hs  Plugin.lhs
apps/tach-manager-impulse/test/Tach/Manager/: ImpulseSpec.hs
apps/tach-manager-impulse/test/Tach/Manager/Impulse/: AppManagerSpec.hs  PluginSpec.hs
apps/tach-manager-impulse/toyproc/: Main.hs
apps/tach-node-impulse/: README.md  client_session_key.aes  tach-node-impulse.cabal
apps/tach-node-impulse/src/: Args.hs  Main.hs
apps/tach-node-impulse/src/Tach/Node/: Impulse.hs
apps/tach-node-impulse/src/Tach/Node/Impulse/: Internal.hs
apps/tach-node-impulse/test/Tach/Node/: ImpulseSpec.hs
apps/tach-query/: .gitignore  README.md  client_session_key.aes  mongoDBConfig.yml  tach-query-routes  tach-query.cabal
apps/tach-query/src/: Main.hs
apps/tach-query/src/Tach/: Query.hs
apps/tach-query/src/Tach/Query/: Foundation.hs  Internal.hs  Routes.hs  Types.hs
apps/tach-query/test/Tach/: QuerySpec.hs
binary-store/: binary-store.cabal
binary-store/Format/: BinaryStore.hs
binary-store/experiment/: size.htex
core-libs/tach-acid/: README.md  tach-acid.cabal
core-libs/tach-acid-impulse-lib/: changelog.md  tach-acid-impulse-lib.cabal
core-libs/tach-acid-impulse-lib/src/Tach/Acid/Impulse/: Cruds.hs  Lens.hs  State.hs
core-libs/tach-acid-impulse-lib/test/Tach/Acid/Impulse/: CrudSpec.hs  StateSpec.hs
core-libs/tach-acid/src/Tach/: Acid.hs
core-libs/tach-acid/src/Tach/Acid/: Create.hs  Delete.hs  Internal.hs  Read.hs  Search.hs  Update.hs
core-libs/tach-acid/test/Tach/: AcidSpec.hs
core-libs/tach-db-acidic/: README.md  tach-db-acidic.cabal
core-libs/tach-db-acidic/src/Tach/DB/: Acid.hs
core-libs/tach-db-acidic/src/Tach/DB/Acid/: Internal.hs  Raw.hs  Transform.hs  Types.hs
core-libs/tach-db-acidic/test/Tach/DB/: AcidSpec.hs
core-libs/tach-migration-acid-lib/: README.md  changelog.md  tach-migration-acid-lib.cabal
core-libs/tach-migration-acid-lib/src/Tach/Migration/Acidic/: State.hs
core-libs/tach-migration-acid-lib/test/Tach/Migration/Acidic/: StateSpec.hs
core-libs/tach-migration-acidic/: README.md  tach-migration-acidic.cabal
core-libs/tach-migration-acidic/src/Tach/Migration/: Acidic.hs
core-libs/tach-migration-acidic/src/Tach/Migration/Acidic/: Instances.hs  Internal.hs  Types.hs
core-libs/tach-migration-acidic/test/Tach/Migration/: AcidicSpec.hs
core-libs/tach-periodic/: README.md  tach-periodic.cabal
core-libs/tach-periodic/benchmarks/: Main.hs
core-libs/tach-periodic/src/Tach/: Periodic.hs
core-libs/tach-periodic/src/Tach/Periodic/: Internal.hs
core-libs/tach-periodic/test/Tach/: PeriodicSpec.hs
core-libs/tach-wavelet-core/: README.md  tach-wavelet-core.cabal
core-libs/tach-wavelet-core/src/Tach/Wavelet/: Core.hs
core-libs/tach-wavelet-core/src/Tach/Wavelet/Core/: Internal.hs
core-libs/tach-wavelet-core/test/Tach/Wavelet/: CoreSpec.hs
core-types/impulse-series-types/: README.md  impulse-series-types.cabal
core-types/impulse-series-types/src/Tach/Impulse/: Types.hs
core-types/impulse-series-types/src/Tach/Impulse/Types/: Impulse.hs  Internal.hs  TimeValue.hs  TimeValueSeries.hs
core-types/tach-db-types/: README.md  tach-db-types.cabal
core-types/tach-db-types/src/Tach/DB/: Types.hs
core-types/tach-db-types/src/Tach/DB/Types/: Acid.hs  Internal.hs
core-types/tach-db-types/test/Tach/DB/: TypesSpec.hs
core-types/tach-impulse-series-types/: changelog.md  tach-impulse-series-types.cabal
core-types/tach-impulse-series-types/src/Tach/Impulse/Types/: Impulse.hs  TimeValue.hs  TimeValueSeries.hs
core-types/tach-impulse-series-types/test/Tach/Impulse/: TypesSpec.hs
core-types/tach-impulse-series-types/test/Tach/Impulse/Types/: TimeValueSeriesSpec.hs
core-types/tach-migration-acidic/: README.md  changelog.md  tach-migration-acidic.cabal
core-types/tach-migration-acidic/src/Tach/Migration/Acidic/: Instances.hs  Types.hs
core-types/tach-migration-routes/: README.md  addsources.sh  cabal.config  client_session_key.aes  config.yml  migration-routes  tach-migration-routes.cabal  upload.hs
core-types/tach-migration-routes/src/: Main.hs
core-types/tach-migration-routes/src/Tach/Migration/: Foundation.hs  Instances.hs  Routes.hs  migration-routes
core-types/tach-migration-routes/src/Tach/Migration/Routes/: Internal.hs  Types.hs
core-types/tach-migration-routes/test/Tach/Migration/: RoutesSpec.hs
core-types/tach-migration-types/: ChangeLog.md  README.md  tach-migration-types.cabal
core-types/tach-migration-types/src/Tach/Migration/: Types.hs
core-types/tach-migration-types/src/Tach/Migration/Types/: Internal.hs
core-types/tach-migration-types/test/Tach/Migration/: TypesSpec.hs
core-types/tach-transformable-types/: README.md  tach-transformable-types.cabal
core-types/tach-transformable-types/src/Tach/Transformable/: Types.hs
core-types/tach-transformable-types/src/Tach/Transformable/Types/: Impulse.hs  Internal.hs  Transform.hs  Wavelet.hs
core-types/tach-transformable-types/test/: Spec.hs
core-types/tach-transformable-types/test/Tach/Transformable/: IntegrationSpec.hs  TypesSpec.hs
core-types/tach-typeclasses/: README.md  tach-typeclasses.cabal
core-types/tach-typeclasses/src/Tach/: Class.hs
core-types/tach-typeclasses/src/Tach/Class/: Bounds.hs  Insertable.hs  Internal.hs  Periodic.hs  Queryable.hs
core-types/tach-typeclasses/src/Tach/Class/Bounds/: Bifoldable.hs  Foldable.hs
core-types/tach-typeclasses/src/Tach/Types/: Classify.hs
core-types/tach-typeclasses/src/Tach/Types/Classify/: Lens.hs
core-types/tach-typeclasses/test/Tach/: ClassSpec.hs
core-types/tach-wavelet-types/: README.md  addsources.sh  tach-wavelet-types.cabal
core-types/tach-wavelet-types/src/Tach/Wavelet/Types/: Internal.hs  (+1 more)
core-types/transformable-types/: transformable-types.cabal
(+45 files in other folders)
