name:                binary-store
version:             0.1.0.0
synopsis:            Format to store data using the binary transform.
description:         ...
license:             BSD3
license-file:        LICENSE
author:              Daniel Díaz
maintainer:          daniel.casanueva@plowtech.net
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Format.BinaryStore
  build-depends: base == 4.*
               , binary-list >=0.3 && <0.4
               , bytestring >=0.10 && <0.11
               , binary >=0.7 && <0.8
               , reinterpret-cast
               , binary-transform
  default-language:    Haskell2010
