Name:                   tach-manager-impulse
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Manager.Impulse
  Other-Modules:        Tach.Manager.Impulse.Internal
  Build-Depends:        base >= 4 && < 5
                      , yesod == 1.2.5
                      , yesod-core == 1.2.7
                      , unix-process-conduit == 0.2.2

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Executable impulse-manager
  main-is:            Main.hs
  HS-Source-Dirs:     src
  Build-Depends:      base
                    , yesod
                    , yesod-core
                    , unix-process-conduit
Source-Repository head
  Type:                 git
--  Location:             
