Name:                   tach-manager-impulse
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Manager.Impulse
  Other-Modules:        Tach.Manager.Impulse.Internal
  Build-Depends:        base >= 4 && < 5
                      , yesod == 1.2.5
                      , yaml  == 0.8.8
                      , vector == 0.10.9.1
                      , yesod-core == 1.2.7
                      , keter
                      , system-filepath == 0.4.9
                      , system-fileio   == 0.3.12
                      , basic-prelude
                      , data-default    == 0.5.3
                      , containers == 0.5.0.0
                      , unordered-containers == 0.2.3.3
                      , unix-process-conduit == 0.2.2.3
                      , random == 1.0.1.1
                      , transformers == 0.3.0.0                      




Executable toyproc
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       toyproc
  Ghc-Options:          -Wall 
  Main-Is:              Main.hs
  Build-Depends:        base
                      , system-filepath
                      , system-fileio
                      , basic-prelude



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , tach-manager-impulse
                      , hspec
                      , yesod 
                      , yaml  
                      , yesod-core 
                      , keter
                      , vector
                      , system-filepath 
                      , system-fileio   
                      , basic-prelude
                      , data-default    
                      , containers 
                      , unix-process-conduit 
                      , unordered-containers 
                      , random 
                      , transformers 


Executable impulse-manager
  main-is:            Main.hs
  HS-Source-Dirs:     src
  Build-Depends:      base
                    , yesod
                    , yesod-core
                    , unix-process-conduit
Source-Repository head
  Type:                 git
--  Location:             
