Name:                   tach-node-impulse
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Node.Impulse
  Other-Modules:        Tach.Node.Impulse.Internal
                        Args
  Build-Depends:        base >= 4 && < 5
                      , yesod == 1.2.5
                      , yesod-core == 1.2.7
                      , tach-acid-impulse-lib == 0.1.8
                      , tach-migration-routes == 0.1.4
                      , cmdargs

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , tach-migration-routes
                      , cmdargs
                      , hspec

Executable impulse-node
  main-is:            Main.hs
  HS-Source-Dirs:     src
  Build-Depends:      base
                    , yesod
                    , yesod-core
                    , tach-acid-impulse-lib
                    , tach-migration-routes
                    , cmdargs
                    , acid-state

Source-Repository head
  Type:                 git
--  Location:             
