Name:                   tach-query
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Query
                      , Tach.Query.Routes
                      , Tach.Query.Foundation
                      , Tach.Query.Types
  Other-Modules:        Tach.Query.Internal
  Build-Depends:        base >= 4 && < 5
                      , yesod-core == 1.2.16
                      , yesod == 1.2.5.2
                      , aeson == 0.7.0.6
                      , persist-mongo-template >= 0.5.7
                      , persistent == 1.3.0.6
                      , warp == 3.0.0.3
                      , streaming-commons == 0.1.3
                      , text
                      , time
                      , persistent-mongoDB == 1.3.1.1
                      , mongoDB == 1.4.4
                      , safe

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

executable         tach-query-simple
    main-is:           Main.hs
    Default-Language:   Haskell2010
    hs-source-dirs:    src
    Build-Depends:      base >= 4 && < 5
                      , yesod-core
                      , yesod
                      , aeson
                      , persist-mongo-template >= 0.5.7
                      , persistent
                      , warp
                      , streaming-commons
                      , text
                      , time
                      , persistent-mongoDB
                      , persistent
                      , safe
                      , mongoDB
                      
    ghc-options:       -threaded -O2 -rtsopts -Wall 

Source-Repository head
  Type:                 git
--  Location:             
