Name:                   tach-acid-impulse-lib
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Acid.Impulse.State
                        Tach.Acid.Impulse.Cruds
                        Tach.Acid.Impulse.Cruds.Create
                        Tach.Acid.Impulse.Cruds.Read
  Other-Modules:        Tach.Acid.Impulse.State.Internal
                        Tach.Acid.Impulse.Cruds.Types
  Build-Depends:        base >= 4 && < 5
                      , tach-migration-acidic     == 0.1.2.3
                      , tach-impulse-series-types == 0.1.5.3
                      , safecopy                  == 0.8.3.7569
                      , containers                == 0.5.0.0
                      , vector                    == 0.10.9.1
                      , acid-state                == 0.12.1
                      , mtl                       == 2.1.2
                      , system-filepath           == 0.4.9
                      , basic-prelude             == 0.3.6.0 
                      , aeson                     == 0.7.0.2
                      , text == 1.1.0.1
                      , bytestring == 0.10.0.2
                      , lens >= 4 


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , tach-acid-impulse-lib
                      , hspec
                      , tach-migration-acidic     
                      , tach-impulse-series-types 
                      , safecopy                  
                      , containers                
                      , vector                    == 0.10.9.1
                      , acid-state                == 0.12.1
                      , mtl                       == 2.1.2
                      , system-filepath           == 0.4.9
                      , basic-prelude             == 0.3.6.0 
                      , aeson                     == 0.7.0.2
                      , text == 1.1.0.1
                      , bytestring == 0.10.0.2
                      , lens >= 4 



Source-Repository head
  Type:                 git
--  Location:             



