Name:                   tach-acid
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Acid
                        Tach.Acid.Create
                        Tach.Acid.Read
                        Tach.Acid.Update
                        Tach.Acid.Delete
                        Tach.Acid.Search
  Other-Modules:        Tach.Acid.Internal
  Build-Depends:        base >= 4 && < 5
                      , directed-keys >= 0.2.1
                      , cereal >= 0.4.0.1
                      , bytestring >= 0.10.4.0
                      , tach-typeclasses >= 0.1.0
                      , tach-transformable-types >= 0.1.6
                      , tach-impulse-series-types >= 0.1.11
                      , containers >= 0.5.5.1
                      , bifunctors >= 4.1.1.1
                      , safecopy >= 0.8.4.7569
                      , mtl >= 2.1.3.1
                      , acid-state >= 0.12.2.7569
                      , tach-db-types >= 0.1.0

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
