Name:                   tach-db-acidic
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.DB.Acid
                        Tach.DB.Acid.Raw
                        Tach.DB.Acid.Raw.Create
                        Tach.DB.Acid.Raw.Delete
                        Tach.DB.Acid.Raw.Search
                        Tach.DB.Acid.Raw.Read
                        Tach.DB.Acid.Raw.Types
                        Tach.DB.Acid.Transform
                        Tach.DB.Acid.Transform.Create
                        Tach.DB.Acid.Transform.Delete
                        Tach.DB.Acid.Transform.Read
                        Tach.DB.Acid.Transform.Lens
                        Tach.DB.Acid.Transform.Search
                        Tach.DB.Acid.Transform.Types
                        Tach.DB.Acid.Types
                        Tach.DB.Acid.Raw.Lens
  Other-Modules:        Tach.DB.Acid.Internal
                       ,Tach.DB.Acid.Raw.Internal
  Build-Depends:        base >= 4 && < 5
                      , acid-state >= 0.12.2.7569
                      , safecopy >= 0.8.4.7569
                      , containers >= 0.5.5.1
                      , vector >= 0.10.9.1
                      , bytestring >= 0.10.4.0
                      , directed-keys >= 0.2.1
                      , tach-impulse-series-types >= 0.1.11
                      , basic-prelude >= 0.3.8
                      , cereal >= 0.4.0.1
                      , lens >= 4.2
                      , mtl >= 2.2.1
                      , aeson >= 0.7.0.6
                      , tach-transformable-types >= 0.1.7.1
                      , tach-db-types >= 0.1.2
                      , tach-typeclasses >= 0.1.0


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , acid-state
                      , safecopy
                      , containers
                      , vector
                      , bytestring
                      , directed-keys
                      , tach-impulse-series-types
                      , basic-prelude
                      , cereal
                      , lens
                      , mtl
                      , aeson


Source-Repository head
  Type:                 git
--  Location:             
