Name:                   tach-migration-acidic
Version:                0.1.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Migration.Acidic
                        Tach.Migration.Acidic.Types
                        Tach.Migration.Acidic.Instances
  Other-Modules:        Tach.Migration.Acidic.Internal
  Build-Depends:        base >= 4 && < 5
                      , acid-state                == 0.12.1
                      , safecopy                  == 0.8.3.7569
                      , tach-impulse-series-types == 0.1.2.1
                      , containers == 0.5.0.0
                      , vector == 0.10.9.1

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
