Name:                   tach-periodic
Version:                0.1.1
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Periodic
  Other-Modules:        Tach.Periodic.Internal
  Build-Depends:        base >= 4 && < 5
                      , vector
                      , random
                      , containers
                      , tach-impulse-series-types == 0.1.8
                      , safe == 0.3.4

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , vector
                      , random
                      , containers
                      , tach-impulse-series-types
                      , safe

Source-Repository head
  Type:                 git
--  Location:             
