Name:                   tach-periodic
Version:                0.1.3
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Classify Periodic data
Description:            classify and transform data with a wavelet transform
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Periodic
  Other-Modules:        Tach.Periodic.Internal
  Build-Depends:        base >= 4 && < 5
                      , vector
                      , random
                      , containers
                      , tach-impulse-series-types == 0.1.9
                      , safe == 0.3.4

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , vector
                      , random
                      , containers
                      , tach-impulse-series-types
                      , safe

executable bench
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , benchmarks

  Main-Is:              Main.hs
  Ghc-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        base
                      , vector
                      , random
                      , containers
                      , tach-impulse-series-types
                      , safe

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/tach
