Name:                   tach-db-types
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.DB.Types
                        Tach.DB.Types.Acid
  Other-Modules:        Tach.DB.Types.Internal
  Build-Depends:        base >= 4 && < 5
                      , directed-keys
                      , cereal
                      , bytestring
                      , aeson
                      , text
                      , tach-typeclasses >= 0.0.0
                      , tach-transformable-types >= 0.1.5.1
                      , tach-impulse-series-types >= 0.1.11
                      , containers >= 0.5.5.1
                      , bifunctors >= 4.1.1.1
                      , safecopy
                      , mtl
                      , acid-state
                      , wavelets >= 0.1.8



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
