Name:                   tach-db-types
Version:                0.1.2
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Types and transformation for tach-db
Description:            Handles the transformation and types for tach-db and keeps track of migrations or safecopy
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.DB.Types
                        Tach.DB.Types.Acid
                        Tach.DB.Types.Raw.Types
                        Tach.DB.Types.Transform.Types
  Other-Modules:        Tach.DB.Types.Internal
  Build-Depends:        base >= 4 && < 5
                      , directed-keys >= 0.2.1
                      , cereal >= 0.4.0.1
                      , bytestring >= 0.10.4.0
                      , aeson >= 0.7.0.6
                      , text >= 1.1.1.3
                      , tach-typeclasses >= 0.1.0
                      , tach-transformable-types >= 0.1.7.1
                      , tach-impulse-series-types >= 0.1.11
                      , containers >= 0.5.5.1
                      , bifunctors >= 4.1.1.1
                      , safecopy >= 0.8.4.7569
                      , mtl >= 2.1.3.1
                      , acid-state >= 0.12.2.7569
                      , wavelets >= 0.1.8
                      , numeric-tools >= 0.2.0.1.7569
                      , basic-prelude



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/tach
