Name:                   tach-migration-acidic
Version:                0.1.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Acid Types for tach
extra-source-files:     changelog.md
Description:            
   SafeCopy instances are created for an impulse series, and a map to a bytestring where each impulse series should be stored.
   tach-migration-acidic holds the core types for the acid framework used in Tach.  The actual functions for it are used in tach-migration-acidic-lib 
   Also, this is where the Acidic instances are developed.  Due to the way Acid is set up.

Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Migration.Acidic
                        Tach.Migration.Acidic.Types
                        Tach.Migration.Acidic.Instances
  Other-Modules:        Tach.Migration.Acidic.Internal
  Build-Depends:        base >= 4 && < 5
                      , acid-state                == 0.12.1
                      , safecopy                  == 0.8.3.7569
                      , tach-impulse-series-types == 0.1.5
                      , safecopy                  == 0.8.3.7569
                      , containers == 0.5.0.0
                      , vector == 0.10.9.1
                      , bytestring == 0.10.0.2

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/tach.git
