Name:                   tach-migration-routes
Version:                0.1.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Migration.Routes
  Other-Modules:        Tach.Migration.Routes.Internal
  Build-Depends:        base >= 4 && < 5
                      , yesod == 1.2.5
                      , tach-impulse-series-types == 0.1.1.1
                      , yesod-core == 1.2.7
                      , aeson == 0.7.0.2
                      , text == 1.1.0.1
                      , bytestring == 0.10.0.2
                      , http-types == 0.8.3
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , yesod
                      , yesod-test
                      , yesod-core
                      , tach-migration-routes
                      , tach-impulse-series-types
                      , text
                      , aeson
                      , bytestring
                      , http-types

Source-Repository head
  Type:                 git
--  Location:             
