Name:                   tach-migration-routes
Version:                0.1.4.2
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Routes for the migration of data
Description:            Handles the reuqest for the migration of data and helps share the routes so route names are shared and compiled
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Tach.Migration.Routes
                      , Tach.Migration.Instances
  Other-Modules:        Tach.Migration.Routes.Internal
  Build-Depends:        base >= 4 && < 5
                      , yesod == 1.2.5
                      , tach-impulse-series-types == 0.1.7
                      , tach-acid-impulse-lib == 0.1.9
                      , yesod-core == 1.2.7
                      , aeson == 0.7.0.2
                      , text == 0.11.3.1
                      , bytestring == 0.10.0.2
                      , http-types == 0.8.3
                      , acid-state == 0.12.1
                      , tach-migration-acidic == 0.1.5
                      , containers == 0.5.0.0
                      , vector == 0.10.9.1
                      , directed-keys == 0.1.2
                      , cereal == 0.4.0.1
                      , stm == 2.4.3
                      , filesystem-trees == 0.1.0.5
                      , utf8-string == 0.3.7
Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , yesod
                      , yesod-test
                      , yesod-core
                      , tach-migration-routes
                      , tach-impulse-series-types
                      , text
                      , aeson
                      , bytestring
                      , http-types
                      , acid-state

Source-Repository head
  Type:                 git
  Location:             git@github.com:plow-technologies/tach.git
